# api/swagger.yml
@@ -286,12 +286,15 @@ paths:
         200:
           description: "OK"
           schema:
-            type: object
-            properties:
-              trip_status:
-                type: string
+            $ref: "#/definitions/Success"
         400:
           $ref: "#/responses/BadRequest"
+        401:
+          $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
+        500:
+          $ref: "#/responses/InternalServerError"
         default:
           description: "Error"
           schema:
