# internal/handlers/updateTripStatus.go
@@ -4,7 +4,6 @@ import (
 	"context"
 	"kurirmoo"
 	"kurirmoo/gen/models"
-	"log"
 	"net/http"
 )
 
@@ -12,11 +11,21 @@ func (h *handler) UpdateTripStatus(ctx context.Context, rt *kurirmoo.Runtime, ID
 	var driver models.Driver
 	err = rt.DB().WithContext(ctx).Where("id = ?", ID).First(&driver).Error
 	if err != nil {
-		err = rt.SetError(http.StatusNotFound, "Data not found")
+		err = rt.SetError(http.StatusUnauthorized, "You don't have access")
 		return "", err
 	}
 
-	log.Println("===>>>", driver.TripStatus)
+	if driver.TripStatus == "online" {
+		driver.TripStatus = "offline"
+	} else {
+		driver.TripStatus = "online"
+	}
+
+	err = rt.DB().WithContext(ctx).Model(&driver).Update("trip_status", driver.TripStatus).Error
+	if err != nil {
+		err = rt.SetError(http.StatusInternalServerError, "Internal server error")
+		return "", err
+	}
 
 	return driver.TripStatus, nil
 }
